--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,3 +51,25 @@
   </script>
 
 </head>
+
+<head>
+  <!-- ... -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/@waline/client@v2/dist/waline.css"
+  />
+  <!-- ... -->
+</head>
+<body>
+  <!-- ... -->
+  <div id="waline"></div>
+  <script type="module">
+    import { init } from 'https://unpkg.com/@waline/client@v2/dist/waline.mjs';
+
+    init({
+      el: '#waline',
+      serverURL: 'https://waline-test-2022-12-07-i5mj1x5v4-ym-xiu.vercel.app',
+    });
+  </script>
+</body>
+
