--- a/_includes/info.html
+++ b/_includes/info.html
@@ -2,3 +2,16 @@
    <span class="Toast-icon">{% octicon info %}</span>
    <span class="Toast-content">{{include.text}}</span>
 </div>
+
+<body>
+  <!-- ... -->
+  <div id="waline"></div>
+  <script type="module">
+    import { init } from 'https://unpkg.com/@waline/client@v2/dist/waline.mjs';
+
+    init({
+      el: '#waline',
+      serverURL: 'https://waline-test-2022-12-07-i5mj1x5v4-ym-xiu.vercel.app/',
+    });
+  </script>
+</body>
