--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,3 +1,16 @@
+<body>
+  <!-- ... -->
+  <div id="waline"></div>
+  <script type="module">
+    import { init } from 'https://unpkg.com/@waline/client@v2/dist/waline.mjs';
+
+    init({
+      el: '#waline',
+      serverURL: 'https://waline-test-2022-12-07-i5mj1x5v4-ym-xiu.vercel.app/',
+    });
+  </script>
+</body>
+
 <ul class="social-media-list">
   <li><a href="https://github.com/{{ site.github.owner_name | cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use></svg> <span class="username">{{ site.github.owner_name | escape }}</span></a></li>
   {%- if site.dribbble_username -%}<li><a href="https://dribbble.com/{{ site.dribbble_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#dribbble' | relative_url }}"></use></svg> <span class="username">{{ site.dribbble_username| escape }}</span></a></li>{%- endif -%}
