--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,32 @@
     </script>
   {% endif %}
 
+<!--   <script>
+  function wrap_img(fn) {
+    if (document.attachEvent ? document.readyState === "complete" : document.readyState !== "loading") {
+        var elements = document.querySelectorAll(".post img");
+        Array.prototype.forEach.call(elements, function(el, i) {
+            if (el.getAttribute("title")) {
+                const caption = document.createElement('figcaption');
+                var node = document.createTextNode(el.getAttribute("title"));
+                caption.appendChild(node);
+                const wrapper = document.createElement('figure');
+                wrapper.className = 'image';
+                el.parentNode.insertBefore(wrapper, el);
+                el.parentNode.removeChild(el);
+                wrapper.appendChild(el);
+                wrapper.appendChild(caption);
+            }
+        });
+    } else { document.addEventListener('DOMContentLoaded', fn); }
+  }
+  window.onload = wrap_img;
+  </script> -->
+
+
+</head>
+
+<body>
   <script>
   function wrap_img(fn) {
     if (document.attachEvent ? document.readyState === "complete" : document.readyState !== "loading") {
@@ -51,11 +77,7 @@
   }
   window.onload = wrap_img;
   </script>
-
-
-</head>
-
-<body>
+  
   <!-- ... -->
   <div id="waline"></div>
   <script type="module">
