--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     {%- include google-analytics.html -%}
   {%- endif -%}
   
-  <link rel="stylesheet" href="https://unpkg.com/@waline/client@v2/dist/waline.css"/>
+<!--   <link rel="stylesheet" href="https://unpkg.com/@waline/client@v2/dist/waline.css"/> -->
 
   {% if site.use_math %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
@@ -79,7 +79,7 @@
   </script>
   
   <!-- ... -->
-  <div id="waline"></div>
+<!--   <div id="waline"></div>
   <script type="module">
     import { init } from 'https://unpkg.com/@waline/client@v2/dist/waline.mjs';
 
@@ -87,6 +87,6 @@
       el: '#waline',
       serverURL: 'https://waline-test-2022-12-07-i5mj1x5v4-ym-xiu.vercel.app/',
     });
-  </script>
+  </script> -->
 </body>
 
